# cat-snake

./: Cargo.toml  Makefile.toml  README.md  Snapshot.txt  TODO.txt
assets/: goal.gltf  goal_inactive.gltf  kitchen.glb  kitchen.gltf  kitchen2.gltf  level1.lvl  test_picking.lvl
assets/levels/: level1.lvl  level2.lvl  level3.lvl  level4.lvl  level5.lvl  new.lvl  test_fall_on_goal.lvl
assets/models/: goal_active.gltf  goal_inactive.gltf  kitchen1.gltf  kitchen2.gltf  kitchen3.gltf
assets/raw/: composition.blend  goal_active.blend  goal_active.blend1  goal_inactive.blend  goal_inactive.blend1  kitchen.blend  kitchen.blend1  kitchen1.blend  kitchen1.blend1  kitchen2.blend  kitchen2.blend1  kitchen3.blend  kitchen3.blend1
src/: args.rs  convert_levels.rs  desktop_main.rs  game.rs
src/gameplay/: camera_plugin.rs  commands.rs  game_constants_pluggin.rs  game_constants_plugin.rs  level_entities.rs  level_pluggin.rs  level_plugin.rs  mod.rs  movement_pluggin.rs  movement_plugin.rs  snake_pluggin.rs  snake_plugin.rs  undo.rs
src/level/: level_instance.rs  level_template.rs  levels.rs  mod.rs  test_levels.rs
src/menus/: main_menu.rs  select_level_menu.rs
src/tools/: automated_test_pluggin.rs  automated_test_plugin.rs  dev_tools_pluggin.rs  dev_tools_plugin.rs  editor_plugin.rs  mod.rs
src/tools/cameras/: camera_3d_free.rs  camera_3d_panorbit.rs  mod.rs
src/tools/picking/: events.rs  focus.rs  highlight.rs  mod.rs  mouse.rs  selection.rs
src/utils/: mod.rs
