[package]
name = "cat-snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/game.rs"

[[bin]]
name = "cat-snake"
path = "src/desktop_main.rs"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
    "render",
    "bevy_winit",
    "png",
    "x11",
    "wayland",
    "filesystem_watcher",
]

[dependencies.bevy_kira_audio]
version = "0.13"
default-features = false
features = ["mp3"]

[dependencies]
wasm-bindgen = "0.2"
bevy-inspector-egui = "0.16.0"
bevy_egui = "0.18.0"
bevy_prototype_debug_lines = { git = "https://github.com/Toqozz/bevy_debug_lines.git", features = ["3d", "shapes"] }
bevy_tweening = "0.6.0"
clap = { version = "4.1.1", features = ["derive"] }
egui = "0.20.1"
bracket-color = "~0.8"
iyes_loopless = "0.9"
rand = "0.8.5"
ron = "0.8"
serde = "1.0.152"
bevy_mod_raycast = "0.7.0"

# Wasm Dependenccies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
# Used for resizing the canvas to fit the window
web-sys = { version = "0.3", features = ["Window"] }
gloo-events = "0.1"


[profile.dev.package."*"]
opt-level=3

[profile.release]
lto = "thin"
